--- a/about us/ourclient.html
+++ b/about us/ourclient.html
@@ -304,7 +304,8 @@
 
     </section>
 
-    <!--    contact section-->
+ <!-- contact section-->
+
     <section id="contact">
         <div class="container">
             <div class="contact-wrapper">
@@ -315,7 +316,7 @@
                     </h2>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3 col-md-4 wcubox">
+                    <div class="col-sm-6 col-md-4 wcubox">
                         <div class="wcu-box-style">
                             <h4 class="black-h"><i class="fa-regular fa-clock"></i> 24/7 Support</h4>
                             <hr>
@@ -324,7 +325,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-4 wcubox">
+                    <div class="col-sm-6 col-md-4 wcubox">
                         <div class="wcu-box-style">
                             <h4 class="black-h"><i class="fa-regular fa-clock"></i> 24/7 Support</h4>
                             <hr>
@@ -333,7 +334,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-4 wcubox">
+                    <div class="col-sm-6 col-md-4 wcubox">
                         <div class="wcu-box-style">
                             <h4 class="black-h"><i class="fa-regular fa-clock"></i> 24/7 Support</h4>
                             <hr>
@@ -342,7 +343,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-4 wcubox">
+                    <div class="col-sm-6 col-md-4 wcubox">
                         <div class="wcu-box-style">
                             <h4 class="black-h"><i class="fa-regular fa-clock"></i> 24/7 Support</h4>
                             <hr>
@@ -351,7 +352,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-4 wcubox">
+                    <div class="col-sm-6 col-md-4 wcubox">
                         <div class="wcu-box-style">
                             <h4 class="black-h"><i class="fa-regular fa-clock"></i> 24/7 Support</h4>
                             <hr>
@@ -360,7 +361,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-4 wcubox">
+                    <div class="col-sm-6 col-md-4 wcubox">
                         <div class="wcu-box-style">
                             <h4 class="black-h"><i class="fa-regular fa-clock"></i> 24/7 Support</h4>
                             <hr>
@@ -373,64 +374,64 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-sm-3 col-md-3 infobox">
+                    <div class="col-sm-6 col-md-4 col-lg-3 infobox">
                         <div class="info-box-style ">
                             <h4 class="white-h">Company Info</h4>
                             <hr>
                             <div class="row infodetails">
-                                <p style="margin-top: -20px;"><i style="padding:10px" class="fa fa-phone"></i>
-
+                                <p ><i  class="fa fa-phone"></i>
+                                    &nbsp;
                                     +8801844-690700
                                 </p>
-                                <p style="margin-top: -25px;"><i style="padding:10px" class="fa fa-envelope"></i>
+                                <p ><i class="fa fa-envelope"></i>
 
                                     info@itwaybd.com
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-3 infobox">
+                    <div class="col-sm-6 col-md-4 col-lg-3 infobox">
                         <div class="info-box-style ">
                             <h4 class="white-h">Company Info</h4>
                             <hr>
                             <div class="row infodetails">
-                                <p style="margin-top: -20px;"><i style="padding:10px" class="fa fa-phone"></i>
+                                <p ><i  class="fa fa-phone"></i>&nbsp;
 
                                     +8801844-690700
                                 </p>
-                                <p style="margin-top: -25px;"><i style="padding:10px" class="fa fa-envelope"></i>
+                                <p ><i  class="fa fa-envelope"></i>&nbsp;
 
                                     info@itwaybd.com
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-3 infobox">
+                    <div class="col-sm-6 col-md-4 col-lg-3 infobox">
                         <div class="info-box-style ">
                             <h4 class="white-h">Company Info</h4>
                             <hr>
                             <div class="row infodetails">
-                                <p style="margin-top: -20px;"><i style="padding:10px" class="fa fa-phone"></i>
-
+                                <p ><i class="fa fa-phone"></i>
+                                    &nbsp;
                                     +8801844-690700
                                 </p>
-                                <p style="margin-top: -25px;"><i style="padding:10px" class="fa fa-envelope"></i>
+                                <p ><i  class="fa fa-envelope"></i>&nbsp;
 
                                     info@itwaybd.com
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-3 infobox">
+                    <div class="col-sm-6 col-md-4 col-lg-3 infobox">
                         <div class="info-box-style ">
                             <h4 class="white-h">Company Info</h4>
                             <hr>
                             <div class="row infodetails">
-                                <p style="margin-top: -20px;"><i style="padding:10px" class="fa fa-phone"></i>
+                                <p ><i  class="fa fa-phone"></i>&nbsp;
 
                                     +8801844-690700
                                 </p>
-                                <p style="margin-top: -25px;"><i style="padding:10px" class="fa fa-envelope"></i>
+                                <p ><i  class="fa fa-envelope"></i>&nbsp;
 
                                     info@itwaybd.com
                                 </p>
@@ -482,7 +483,7 @@
 
                                     <div class="row">
                                         <a target="_blank" href="#">
-                                            <img src="assets/images/bieamembership.jpeg" alt="">
+                                            <img src="../assets/images/bieamembership.jpeg" alt="">
                                         </a>
 
                                     </div>
@@ -516,7 +517,7 @@
 
                     <!--                    google map -->
 
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-sm-6 col-md-4 map">
                         <div class="mapouter">
                             <div class="gmap_canvas"><iframe width="100%" height="100%" id="gmap_canvas" src="https://maps.google.com/maps?q=sylhet&t=k&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://2yu.co">2yu</a><br>
                                 <style>
@@ -554,8 +555,8 @@
                     </p>
                 </div>
             </div>
-        </div>
 
+        </div>
     </footer>
 
     <!--        jquery -->
