--- a/contact-us.html
+++ b/contact-us.html
@@ -224,9 +224,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6 col-lg-4">
                     <div class="sidebar">
-                        <div class="side vertical-divider-left">
+                        <div class="side ">
 
                             <h3 class="title">IT WAY BD</h3>
 
@@ -246,14 +246,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6 col-lg-4">
                     <div class="sidebar">
-                        <div class="side vertical-divider-left">
+                        <div class="side ">
 
                             <h3 class="title">IT WAY BD</h3>
 
                             <ul class="list">
-                                <li><strong></strong></li>
                                 <li style="font-weight: bold">Australia Office :</li>
                                 <li><i style="color: red" class="fa fa-home  pe-2"></i>Australia Office: New South Wales, Sydney -2198, Australia.</li>
                                 <li><i style="color: red" class="fa fa-mobile  pe-2 "></i>
@@ -269,9 +268,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6 col-lg-4">
                     <div class="sidebar">
-                        <div class="side vertical-divider-left">
+                        <div class="side ">
 
                             <h3 class="title">IT WAY BD</h3>
 
@@ -300,7 +299,8 @@
 
     </section>
 
-    <!--    contact section-->
+   <!-- contact section-->
+
     <section id="contact">
         <div class="container">
             <div class="contact-wrapper">
@@ -311,7 +311,7 @@
                     </h2>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3 col-md-4 wcubox">
+                    <div class="col-sm-6 col-md-4 wcubox">
                         <div class="wcu-box-style">
                             <h4 class="black-h"><i class="fa-regular fa-clock"></i> 24/7 Support</h4>
                             <hr>
@@ -320,7 +320,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-4 wcubox">
+                    <div class="col-sm-6 col-md-4 wcubox">
                         <div class="wcu-box-style">
                             <h4 class="black-h"><i class="fa-regular fa-clock"></i> 24/7 Support</h4>
                             <hr>
@@ -329,7 +329,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-4 wcubox">
+                    <div class="col-sm-6 col-md-4 wcubox">
                         <div class="wcu-box-style">
                             <h4 class="black-h"><i class="fa-regular fa-clock"></i> 24/7 Support</h4>
                             <hr>
@@ -338,7 +338,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-4 wcubox">
+                    <div class="col-sm-6 col-md-4 wcubox">
                         <div class="wcu-box-style">
                             <h4 class="black-h"><i class="fa-regular fa-clock"></i> 24/7 Support</h4>
                             <hr>
@@ -347,7 +347,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-4 wcubox">
+                    <div class="col-sm-6 col-md-4 wcubox">
                         <div class="wcu-box-style">
                             <h4 class="black-h"><i class="fa-regular fa-clock"></i> 24/7 Support</h4>
                             <hr>
@@ -356,7 +356,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-4 wcubox">
+                    <div class="col-sm-6 col-md-4 wcubox">
                         <div class="wcu-box-style">
                             <h4 class="black-h"><i class="fa-regular fa-clock"></i> 24/7 Support</h4>
                             <hr>
@@ -369,64 +369,64 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-sm-3 col-md-3 infobox">
+                    <div class="col-sm-6 col-md-4 col-lg-3 infobox">
                         <div class="info-box-style ">
                             <h4 class="white-h">Company Info</h4>
                             <hr>
                             <div class="row infodetails">
-                                <p style="margin-top: -20px;"><i style="padding:10px" class="fa fa-phone"></i>
-
+                                <p ><i  class="fa fa-phone"></i>
+                                    &nbsp;
                                     +8801844-690700
                                 </p>
-                                <p style="margin-top: -25px;"><i style="padding:10px" class="fa fa-envelope"></i>
+                                <p ><i class="fa fa-envelope"></i>
 
                                     info@itwaybd.com
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-3 infobox">
+                    <div class="col-sm-6 col-md-4 col-lg-3 infobox">
                         <div class="info-box-style ">
                             <h4 class="white-h">Company Info</h4>
                             <hr>
                             <div class="row infodetails">
-                                <p style="margin-top: -20px;"><i style="padding:10px" class="fa fa-phone"></i>
+                                <p ><i  class="fa fa-phone"></i>&nbsp;
 
                                     +8801844-690700
                                 </p>
-                                <p style="margin-top: -25px;"><i style="padding:10px" class="fa fa-envelope"></i>
+                                <p ><i  class="fa fa-envelope"></i>&nbsp;
 
                                     info@itwaybd.com
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-3 infobox">
+                    <div class="col-sm-6 col-md-4 col-lg-3 infobox">
                         <div class="info-box-style ">
                             <h4 class="white-h">Company Info</h4>
                             <hr>
                             <div class="row infodetails">
-                                <p style="margin-top: -20px;"><i style="padding:10px" class="fa fa-phone"></i>
-
+                                <p ><i class="fa fa-phone"></i>
+                                    &nbsp;
                                     +8801844-690700
                                 </p>
-                                <p style="margin-top: -25px;"><i style="padding:10px" class="fa fa-envelope"></i>
+                                <p ><i  class="fa fa-envelope"></i>&nbsp;
 
                                     info@itwaybd.com
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-3 infobox">
+                    <div class="col-sm-6 col-md-4 col-lg-3 infobox">
                         <div class="info-box-style ">
                             <h4 class="white-h">Company Info</h4>
                             <hr>
                             <div class="row infodetails">
-                                <p style="margin-top: -20px;"><i style="padding:10px" class="fa fa-phone"></i>
+                                <p ><i  class="fa fa-phone"></i>&nbsp;
 
                                     +8801844-690700
                                 </p>
-                                <p style="margin-top: -25px;"><i style="padding:10px" class="fa fa-envelope"></i>
+                                <p ><i  class="fa fa-envelope"></i>&nbsp;
 
                                     info@itwaybd.com
                                 </p>
@@ -512,7 +512,7 @@
 
                     <!--                    google map -->
 
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-sm-6 col-md-4 map">
                         <div class="mapouter">
                             <div class="gmap_canvas"><iframe width="100%" height="100%" id="gmap_canvas" src="https://maps.google.com/maps?q=sylhet&t=k&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://2yu.co">2yu</a><br>
                                 <style>
@@ -541,15 +541,19 @@
         <div class="sub-footer">
             <div class="container">
                 <div class="text-light">
-                    <p>
-                        Copyright © 2022 .
+                    <p>Copyright © 2022 .
+
+
+
+
                         <a href="github.com/mrcodeflex"> @mrcodeflex</a> All Rights Reserved
                     </p>
                 </div>
             </div>
-        </div>
 
+        </div>
     </footer>
+
 
     <!--        jquery -->
     <script src="assets/Jquery/jquery-3.6.1.min.js"></script>
