--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@
                     </h2>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3 col-md-4 wcubox">
+                    <div class="col-sm-6 col-md-4 wcubox">
                         <div class="wcu-box-style">
                             <h4 class="black-h"><i class="fa-regular fa-clock"></i> 24/7 Support</h4>
                             <hr>
@@ -828,7 +828,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-4 wcubox">
+                    <div class="col-sm-6 col-md-4 wcubox">
                         <div class="wcu-box-style">
                             <h4 class="black-h"><i class="fa-regular fa-clock"></i> 24/7 Support</h4>
                             <hr>
@@ -837,7 +837,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-4 wcubox">
+                    <div class="col-sm-6 col-md-4 wcubox">
                         <div class="wcu-box-style">
                             <h4 class="black-h"><i class="fa-regular fa-clock"></i> 24/7 Support</h4>
                             <hr>
@@ -846,7 +846,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-4 wcubox">
+                    <div class="col-sm-6 col-md-4 wcubox">
                         <div class="wcu-box-style">
                             <h4 class="black-h"><i class="fa-regular fa-clock"></i> 24/7 Support</h4>
                             <hr>
@@ -855,7 +855,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-4 wcubox">
+                    <div class="col-sm-6 col-md-4 wcubox">
                         <div class="wcu-box-style">
                             <h4 class="black-h"><i class="fa-regular fa-clock"></i> 24/7 Support</h4>
                             <hr>
@@ -864,7 +864,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-4 wcubox">
+                    <div class="col-sm-6 col-md-4 wcubox">
                         <div class="wcu-box-style">
                             <h4 class="black-h"><i class="fa-regular fa-clock"></i> 24/7 Support</h4>
                             <hr>
@@ -877,7 +877,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-sm-3 col-md-3 infobox">
+                    <div class="col-sm-6 col-md-4 col-lg-3 infobox">
                         <div class="info-box-style ">
                             <h4 class="white-h">Company Info</h4>
                             <hr>
@@ -893,7 +893,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-3 infobox">
+                    <div class="col-sm-6 col-md-4 col-lg-3 infobox">
                         <div class="info-box-style ">
                             <h4 class="white-h">Company Info</h4>
                             <hr>
@@ -909,7 +909,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-3 infobox">
+                    <div class="col-sm-6 col-md-4 col-lg-3 infobox">
                         <div class="info-box-style ">
                             <h4 class="white-h">Company Info</h4>
                             <hr>
@@ -925,7 +925,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-3 infobox">
+                    <div class="col-sm-6 col-md-4 col-lg-3 infobox">
                         <div class="info-box-style ">
                             <h4 class="white-h">Company Info</h4>
                             <hr>
@@ -1020,7 +1020,7 @@
 
                     <!--                    google map -->
 
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-sm-6 col-md-4 map">
                         <div class="mapouter">
                             <div class="gmap_canvas"><iframe width="100%" height="100%" id="gmap_canvas" src="https://maps.google.com/maps?q=sylhet&t=k&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://2yu.co">2yu</a><br>
                                 <style>
